# sakura-player

./: LICENSE  README.md  TODO.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json
src/: eventloop.cpp  eventloop.hpp  exception.hpp  main.cpp  main.qml  meson.build  sakura-player.cpp  sakura-player.hpp  util.hpp
src/gl/: context.cpp  context.hpp  window.cpp  window.hpp
src/imgui/: context.cpp  context.hpp
subprojects/: MpvQt.wrap
